# wgpu-learn

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-1-link
app/: Cargo.toml
engine/: Cargo.toml
engine/src/: camera.rs  context.rs  gui.rs  lib.rs  main.rs  model.rs  pipeline.rs  resourses.rs  state.rs  texture.rs
engine/src/asset_manager/: io.rs  mod.rs  obj_import.rs
engine/src/gpu/: context.rs  mod.rs  resource.rs
engine/src/shaders/: shader.wgsl
src/: camera.rs  camera_controller.rs  gui.rs  instance.rs  lib.rs  main.rs  model.rs  state.rs  texture.rs
src/shaders/: shader.wgsl
