[package]
name = "wgpu-learn"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_wgpu_learn"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
winit = { version = "0.30", features = ["rwh_05"] }
wgpu = "23.0.1" #locked to egui
bytemuck = { version = "1.19.0", features = ["derive"] }
image = { version = "0.25.4", default-features = false, features = [
    "png",
    "jpeg",
] }
cfg-if = "1.0.0"

cgmath = "0.18.0"
tracing-appender = "0.2.3"

egui = "0.30.0"
egui-wgpu = "0.30.0"
egui-winit = { version = "0.30.0"}
profiling = { version = "1" }

tobj = { version = "4", default-features = false, features = ["async"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"


[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.30.0", default-features = false, features = [
    "wayland",
    "x11",
    "serde",
] }

console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }
# Other dependencies
reqwest = { version = "0.12" }


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]