[workspace]
resolver = "3"
members = ["engine", "app"]


[workspace.dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-wasm = "0.2"
winit = { version = "0.30", features = ["rwh_05"] }
wgpu = "27.0.1"
bytemuck = { version = "1.23", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
cfg-if = "1.0"
cgmath = "0.18"

egui = "0.33"
egui-wgpu = "0.33"
egui-winit = { version = "0.33", default-features = false }

tobj = { version = "4.0", default-features = false, features = ["async"] }

console_error_panic_hook = "0.1"
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "Location"] }

reqwest = { version = "0.13" }
pollster = "0.4"

[workspace.build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"
profiling = "1.0"