[package]
edition = "2024"
name = "chu_engine"
version = "0.1.0"

[lib]
name = "chu_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
cgmath.workspace = true
image.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

cfg-if = "1.0" 
console_error_panic_hook = "0.1" 
egui-wgpu.workspace = true 
egui-winit.workspace = true 
egui.workspace = true 
profiling.workspace = true 
tobj = {version = "4.0", default-features = false, features = ["async"]} 
tracing-wasm = "0.2" 
wasm-bindgen = {version = "0.2", default-features = false} 
wasm-bindgen-futures = "0.4" 
web-sys = {version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "Location",
]} 
wgpu = "25.0.1" #locked to egui.workspace=true= { version = "1.23", features = ["derive"] }
winit = {version = "0.30", features = ["rwh_05"]} 
# Other dependencies
reqwest = {version = "0.12"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = {version = "0.32", default-features = false, features = [
  "wayland",
  "x11",
  "serde",
]}

[features]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
