[package]
edition = "2024"
name = "chu_engine"
version = "0.1.0"

[lib]
name = "chu_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
cgmath.workspace = true
cfg-if.workspace = true
console_error_panic_hook.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit = { workspace = true }
image.workspace = true
reqwest.workspace = true
tobj.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing-wasm.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
wgpu.workspace = true
winit.workspace = true

profiling = { version = "1.0.17" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { workspace = true, features = ["wayland", "x11", "serde"] }

